<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mx.unam.becapp.app.GeneralActivity" >


    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>


    <item android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item android:id="@+id/action_stolen"
        android:title="@string/action_stolen"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
           android:orderInCategory="100"
           app:showAsAction="never">
    </item>
</menu>
