<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="27sp"
        android:text="@string/app_name_version"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/left_unam"
                android:layout_width="137dp"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/UNAM"
                android:background="#E9EAED"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />

            <Button
                android:id="@+id/right_unam"
                android:layout_width="137dp"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/UNAM_online"
                android:background="#E9EAED"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                />


        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:textSize="15sp"
        android:text="@string/copyright"
        />
</LinearLayout>
